putting in jquery and starting off with ability to input url and ajax post it to missing route at this point

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -90,6 +90,7 @@
     <script src="/linker/js/sails.io.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/jquery-1.10.2.min.js"></script>
+    <script src="/linker/js/temp.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
