setting up basic backbone app

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -59,7 +59,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -86,11 +86,14 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/linker/js/socket.io.js"></script>
-    <script src="/linker/js/sails.io.js"></script>
+    <script src="/linker/js/3p/jquery-1.10.2.min.js"></script>
+    <script src="/linker/js/3p/underscore-min.js"></script>
+    <script src="/linker/js/3p/backbone-min.js"></script>
     <script src="/linker/js/app.js"></script>
-    <script src="/linker/js/jquery-1.10.2.min.js"></script>
-    <script src="/linker/js/temp.js"></script>
+    <script src="/linker/js/app/router.js"></script>
+    <script src="/linker/js/app/views/header.js"></script>
+    <script src="/linker/js/app/views/race_results.js"></script>
+    <script src="/linker/js/app/views/standings.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
