--- a/views/raceResults/index.ejs
+++ b/views/raceResults/index.ejs
@@ -1,21 +1,32 @@
-<h2><%= race.name %></h2>
-
-<table>
-  <% var keys = Object.keys(results[0]) %>
-  <tr class="heading">
-    <% for (var i = 0; i < keys.length; i++) { %>
-      <% if (headingMap[keys[i]]) { %>
-        <td><%= headingMap[keys[i]] %></td>
-      <% } %>
+<% if (!error) { %>
+  <% if (race) { %>
+    <h2><%= race.name %></h2>
+    <% if (results.length > 0) { %>
+      <table>
+        <% var keys = Object.keys(results[0]) %>
+        <tr class="heading">
+          <% for (var i = 0; i < keys.length; i++) { %>
+            <% if (headingMap[keys[i]]) { %>
+              <td><%= headingMap[keys[i]] %></td>
+            <% } %>
+          <% } %>
+        </tr>
+        <% for (var i = 0; i < results.length; i++) { %>
+          <tr class="result">
+            <% for (var j = 0; j < keys.length; j++){ %> 
+              <% if (headingMap[keys[j]]) { %>
+                <td><%= results[i][keys[j]] %></td>
+              <% } %>
+            <% } %>
+          </tr>
+        <% } %> 
+      </table>
+    <% } else { %>
+      <span>No results found</span>
     <% } %>
-  </tr>
-  <% for (var i = 0; i < results.length; i++) { %>
-    <tr class="result">
-      <% for (var j = 0; j < keys.length; j++){ %> 
-        <% if (headingMap[keys[j]]) { %>
-          <td><%= results[i][keys[j]] %></td>
-        <% } %>
-      <% } %>
-    </tr>
-  <% } %> 
-</table>
+  <% } else { %>
+    <span>Unknown race</span>
+  <% } %>
+<% } else { %>
+  <%= error %>
+<% } %>
