--- a/views/raceResults/index.ejs
+++ b/views/raceResults/index.ejs
@@ -1,6 +1,11 @@
 <% if (!error) { %>
   <% if (race) { %>
     <h2><%= race.name %></h2>
+    <% var detailKeys = Object.keys(race.details) %>
+    <% for (var i = 0; i < detailKeys.length; i++) { %>
+        <%= detailKeys[i] %>: <%= race.details[detailKeys[i]] %><br />
+    <% } %>
+    <br />
     <% if (results.length > 0) { %>
       <table>
         <% var keys = Object.keys(results[0]) %>
