adding in bootstrap. I don't know if you've heard of it, but it's this really cool toolset for front end development. It gives you a lot of pre-made css and components, but is also completely customizable. Please come to me with questions about it, I'd love to explain how it works.

--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,1 +1,3 @@
-this is the header <%= myVar %>
+<nav class="navbar navbar-fixed-top navbar-inverse">
+  <a class='navbar-brand' href='#'>Club Pointz</a>
+</nav>
