--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,8 @@
     -->
 
     <!--STYLES-->
-    
+    <link rel="stylesheet" href="/linker/styles/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/linker/styles/bootstrap.min.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +90,7 @@
     <script src="/linker/js/3p/jquery-1.10.2.min.js"></script>
     <script src="/linker/js/3p/underscore-min.js"></script>
     <script src="/linker/js/3p/backbone-min.js"></script>
+    <script src="/linker/js/3p/bootstrap.min.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/app/router.js"></script>
     <script src="/linker/js/app/views/header.js"></script>
