finishing up backbone stuff

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,6 +93,10 @@
     <script src="/linker/js/3p/bootstrap.min.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/app/router.js"></script>
+    <script src="/linker/js/app/models/race.js"></script>
+    <script src="/linker/js/app/models/team.js"></script>
+    <script src="/linker/js/app/collections/races.js"></script>
+    <script src="/linker/js/app/collections/teams.js"></script>
     <script src="/linker/js/app/views/header.js"></script>
     <script src="/linker/js/app/views/race_results.js"></script>
     <script src="/linker/js/app/views/standings.js"></script>
