loading up data for races and teams backbone models on home page load to be displayed in backbone app immediately

--- a/assets/linker/templates/standings.html
+++ b/assets/linker/templates/standings.html
@@ -1,1 +1,7 @@
 this is the standings view
+There are <%- app.races.length %> races.
+<br>
+<% app.races.each(function (race) { %>
+  <%= race.get('name') %>
+  <br>
+<% }) %>
