--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-fixed-top navbar-inverse">
+<nav class="navbar navbar-inverse">
   <a class='navbar-brand' href='#'>Club Pointz</a>
 </nav>
