Add team results to main controller

--- a/assets/linker/templates/standings.html
+++ b/assets/linker/templates/standings.html
@@ -1,3 +1,9 @@
+Team results?
+
+<% app.teamResults.each( function (teamResult) { %>
+  <%= teamResult %>
+<% }); %>
+
 
 <table class='table'>
   <tr>
