--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -95,7 +95,9 @@
     <script src="/linker/js/app/router.js"></script>
     <script src="/linker/js/app/models/race.js"></script>
     <script src="/linker/js/app/models/team.js"></script>
+    <script src="/linker/js/app/models/teamResult.js"></script>
     <script src="/linker/js/app/collections/races.js"></script>
+    <script src="/linker/js/app/collections/teamResults.js"></script>
     <script src="/linker/js/app/collections/teams.js"></script>
     <script src="/linker/js/app/views/header.js"></script>
     <script src="/linker/js/app/views/race_results.js"></script>
