--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -5,4 +5,5 @@
   window.sailsExports = {}
   sailsExports.racesJson = <%- JSON.stringify(races) %>
   sailsExports.teamsJson = <%- JSON.stringify(teams) %>
+  sailsExports.teamResultsJson = <%- JSON.stringify(teamResults) %>
 </script>
