Add headings to backbone app data

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,9 +93,11 @@
     <script src="/linker/js/3p/bootstrap.min.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/app/router.js"></script>
+    <script src="/linker/js/app/models/heading.js"></script>
     <script src="/linker/js/app/models/race.js"></script>
     <script src="/linker/js/app/models/team.js"></script>
     <script src="/linker/js/app/models/teamResult.js"></script>
+    <script src="/linker/js/app/collections/headings.js"></script>
     <script src="/linker/js/app/collections/races.js"></script>
     <script src="/linker/js/app/collections/teamResults.js"></script>
     <script src="/linker/js/app/collections/teams.js"></script>
