--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -6,4 +6,5 @@
   sailsExports.racesJson = <%- JSON.stringify(races) %>
   sailsExports.teamsJson = <%- JSON.stringify(teams) %>
   sailsExports.teamResultsJson = <%- JSON.stringify(teamResults) %>
+  sailsExports.headingsJson = <%- JSON.stringify(headings) %>
 </script>
