--- a/assets/linker/templates/standings.html
+++ b/assets/linker/templates/standings.html
@@ -1,24 +1,34 @@
-Team results?
+<% var division = 'OPEN MEN A-2013'; %>
 
-<% app.teamResults.each( function (teamResult) { %>
-  <%= teamResult %>
-<% }); %>
-
-
-<table class='table'>
-  <tr>
-    <th>
-    <% _.each(app.races.getMensClubPointsRaces(), function(race) { %>
-	  <th><%= race.get('name') %></th>
+<div class="table-label">
+  <%= division %> Standings
+</div>
+<table class="table table-hover table-condensed table-bordered standings-table">
+  <thead>
+    <tr>
+      <th>Rank</th>
+      <th>Club Name</th>
+      <th>Total Points</th>
+      <% _.each(app.races.getMensClubPointsRaces(), function (race) { %>
+	    <th><%= race.get('label') %></th>
+      <% }); %>
+    </tr>
+  </thead>
+  <tbody>
+    <% _.each(app.teams.getMenDivisionTeams('A'), function (team) { %>
+      <tr>
+        <td></td>
+        <td><%= team.get('name')[0] %></td>
+        <td></td>
+        <% _.each(app.races.getMensClubPointsRaces(), function (race) { %>
+          <% var teamResult =app.teamResults.getResultsForRaceTeamDivision(race.get('id'), team.get('id'), division)%>
+          <% if (teamResult) { %>
+            <td><%= teamResult.get('score') %></td>
+          <% } else { %>
+            <td></td>
+          <% } %>
+        <% }); %>
+      </tr>
     <% }); %>
-  </tr>
+  </tbody>
 </table>
-
-
-this is the standings view
-There are <%- app.races.length %> races.
-<br>
-<% app.races.each(function (race) { %>
-  <%= race.get('name') %>
-  <br>
-<% }) %>
