--- a/assets/linker/templates/standings.html
+++ b/assets/linker/templates/standings.html
@@ -1,53 +1,5 @@
-<%
-  var division = 'OPEN MEN A-2013',
-      mensClubPointsRaces = app.races.getMensClubPointsRaces(),
-      mensDivisionATeams = app.teams.getMenDivisionTeams('A'),
-      teamResults = {};
-  _.each(mensDivisionATeams, function (team) {
-    var teamId = team.get('id');
-    teamResults[teamId] = {};
-    teamResults[teamId].team = team;
-    teamResults[teamId].scoreSum = 0;
-    teamResults[teamId].raceScores = [];
-    _.each(mensClubPointsRaces, function (race) {
-      var teamResult = app.teamResults.getResultsForRaceTeamDivision(race.get('id'), team.get('id'), division);
-      if (teamResult) {
-        teamResults[teamId].raceScores.push(teamResult.get('score'));
-        teamResults[teamId].scoreSum += parseInt(teamResult.get('score'), 10);
-      } else {
-        teamResults[teamId].raceScores.push('');
-      }
-    });
-  });
-  teamResults = _.sortBy(teamResults, function (result) {
-    return 0 - result.scoreSum;
-  });
-%>
-
-<div class="table-label">
-  <%= division %> Standings
-</div>
+<div class="table-label"></div>
 <table class="table table-hover table-condensed table-bordered standings-table">
-  <thead>
-    <tr>
-      <th>Rank</th>
-      <th>Club Name</th>
-      <th>Total Points</th>
-      <% _.each(app.races.getMensClubPointsRaces(), function (race) { %>
-	    <th><%= race.get('label') %></th>
-      <% }); %>
-    </tr>
-  </thead>
-  <tbody>
-    <% _.each(teamResults, function (teamResult, i) { %>
-      <tr>
-        <td><%= i + 1 %></td>
-        <td><%= teamResult.team.get('name')[0] %></td>
-        <td><%= teamResult.scoreSum %></td>
-        <% _.each(teamResult.raceScores, function (score) { %>
-          <td><%= score %></td>
-        <% }); %>
-      </tr>
-    <% }); %>
-  </tbody>
+  <thead></thead>
+  <tbody></tbody>
 </table>
