Main and standings page stylings

--- a/assets/linker/templates/standings_team_row.html
+++ b/assets/linker/templates/standings_team_row.html
@@ -1,5 +1,5 @@
 <tr>
   <% _.each(cells, function (cell) { %>
-    <td><%= cell %></td>
+    <td class="<%= cell.cellClass %>"><%= cell.text %></td>
   <% }); %>
 </tr>
