Show all divisions on standings page

--- a/assets/linker/templates/standings.html
+++ b/assets/linker/templates/standings.html
@@ -1,5 +1,1 @@
-<div class="table-label"></div>
-<table class="table table-hover table-condensed table-bordered standings-table">
-  <thead></thead>
-  <tbody></tbody>
-</table>
+<div id="division-tables"></div>
