--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -8,4 +8,5 @@
   sailsExports.teamsJson = <%- JSON.stringify(teams) %>
   sailsExports.teamResultsJson = <%- JSON.stringify(teamResults) %>
   sailsExports.headingsJson = <%- JSON.stringify(headings) %>
+  sailsExports.divisionsJson = <%- JSON.stringify(divisions) %>
 </script>
