--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,11 +27,13 @@
     <script src="/linker/js/3p/bootstrap.min.js"></script>
     <script src="/linker/js/app.js"></script>
     <script src="/linker/js/app/router.js"></script>
+    <script src="/linker/js/app/models/divisions.js"></script>
     <script src="/linker/js/app/models/heading.js"></script>
     <script src="/linker/js/app/models/race.js"></script>
     <script src="/linker/js/app/models/result.js"></script>
     <script src="/linker/js/app/models/team.js"></script>
     <script src="/linker/js/app/models/teamResult.js"></script>
+    <script src="/linker/js/app/collections/divisions.js"></script>
     <script src="/linker/js/app/collections/headings.js"></script>
     <script src="/linker/js/app/collections/races.js"></script>
     <script src="/linker/js/app/collections/results.js"></script>
