--- a/assets/linker/styles/standings.scss
+++ b/assets/linker/styles/standings.scss
@@ -2,7 +2,7 @@
   .standings-table {
     max-width: 1100px;
     min-width: 600px;
-    margin: auto;
+    margin: 0 auto 24px auto;
 
     background-color: #fff;
     opacity: 0.9;
