--- a/assets/linker/templates/title.html
+++ b/assets/linker/templates/title.html
@@ -1,3 +1,3 @@
 <div class="title">
-  <a href="">Club<span class="title-secondary">Pointz</span></a>
+  <a href="#">Club<span class="title-secondary">Pointz</span></a>
 </div>
