--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,3 +1,5 @@
-<nav class="navbar navbar-inverse">
-  <a class='navbar-brand' href='#'>Club Pointz</a>
+<nav class='navbar navbar-inverse'>
+  <span class='navbar-brand last-update'></span>
+  <a class='navbar-brand navbar-link' href='#'>Contact</a>
 </nav>
+
