showing team results on race result page

--- a/assets/linker/templates/race_results.html
+++ b/assets/linker/templates/race_results.html
@@ -1,4 +1,12 @@
 these are the results for <%= race.get('name') %>
+<br><br>
 
-<div class='indiv-results'>
+<ul class="nav nav-pills">
+  <li class='nav-team-results active'><a>Team Results</a></li>
+  <li class='nav-indiv-results'><a>Individual Results</a></li>
+</ul>
+<div class='team-results'>
+  <div class='men-a-results'>
+  </div>
 </div>
+<div class='indiv-results'></div>
