--- a/assets/linker/templates/race_results_row.html
+++ b/assets/linker/templates/race_results_row.html
@@ -1,2 +1,2 @@
-<%= place %>. <%= result.get('first_name') %> <%= result.get('last_name') %>
+<%= place %>. <%= result.get('first_name') %> <%= result.get('last_name') %> <%= result.getTime() %>
 <br>
