--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,5 +1,5 @@
 <div id='header'></div>
-<div id='title'></div>
+<div id='title'><a href="#">Club<span class="title-secondary">Pointz</span></a></div>
 <div id='content'></div>
 
 <script type="text/javascript">
