Navigate to race results from standings

--- a/assets/linker/styles/standings.scss
+++ b/assets/linker/styles/standings.scss
@@ -16,10 +16,10 @@
       width: 100px;
     }
 
-    .race-link {
+    .race-heading {
       width: 60px;
       padding: 4px 10px;
-      span {
+      .race-link {
         cursor: pointer;
       }
     }
