Some meh styling for race results

--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -1,4 +1,11 @@
+.race-header {
+  font-size: 22px;
+  text-align: center;
+  padding-top: 14px;
+}
+
 .team-result {
+
   border: 1px solid black;
   margin: 5px;
   
