--- a/assets/linker/templates/race_results_row.html
+++ b/assets/linker/templates/race_results_row.html
@@ -1,2 +1,6 @@
-<%= place %>. <%= result.get('first_name') %> <%= result.get('last_name') %> <%= result.getTime() %>
-<br>
+<tr>
+  <td><%= place %></td>
+  <td><%= result.get('first_name') %></td>
+  <td><%= result.get('last_name') %></td>
+  <td><%= result.getTime() %></td>
+</tr>
