--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -29,6 +29,16 @@ body {
   max-width: 1100px;
   min-width: 600px;
   margin: 0 auto 24px auto;
+
+  .table-label {
+    max-width: 1100px;
+    min-width: 600px;
+    margin: auto;
+    color: #fff;
+    font-size: 20px;
+    text-align: right;
+    padding-bottom: 10px;                                                                                                                 
+  }
 }
 
 #title {
@@ -74,5 +84,11 @@ body {
     width: 100%;
     display: inline-block;
     text-align: center;
+  }
+  #content {
+    text-align: center;
+    .table-label {
+      color: #000;
+    }
   }
 }
