Sans serif for all tables

--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -6,6 +6,9 @@ body {
       text-decoration: none;
     }
   }
+  .table {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  }
 }
 
 .navbar {
