WIP race result headings

--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -4,14 +4,6 @@
   padding-top: 14px;
 }
 
-.team-result {
-
-  border: 1px solid black;
-  margin: 5px;
-  
-  .team-result-header {
-    font-weight: bold;
-    border-bottom: 1px solid black;
-    background: lightgray;
-  }
+.place-cell {
+  width: 100px;
 }
