--- a/assets/linker/templates/race_results.html
+++ b/assets/linker/templates/race_results.html
@@ -12,4 +12,4 @@
   </div>
 </div>
 
-<table class='indiv-results table table-condensed table-hover'></div>
+<table class='indiv-results table table-condensed table-hover table-bordered'></table>
