--- a/assets/linker/templates/race_results_table_headings.html
+++ b/assets/linker/templates/race_results_table_headings.html
@@ -1,9 +1,9 @@
 <thead>
   <tr>
-    <th>Overall Place</th>
+    <th class="overall-place">Overall Place</th>
     <% _.each(headings, function (heading) { %>
       <% if (heading) { %>
-        <% var classAttr = heading.get('id') == 'team' ? 'class="indiv-results"' : ''; %>
+        <% var classAttr = 'class="' + heading.get('id').replace('%', 'percent') + '-cell"'; %>
         <th <%=classAttr %>><%= heading.get('text') %></th>
       <% } %>
     <% }); %>
