--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -1,14 +1,44 @@
 .race-header {
   font-size: 22px;
-  text-align: center;
-  padding-top: 14px;
+  padding: 14px 0;
+  float: left;
 }
 
-.btn-group .btn {
+.team-heading {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  text-transform: uppercase;
+  background-color: #eee;
+
+  div {
+    display: inline-block;
+    width: 24%;
+
+    .label {
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: bold;
+      color: #999;
+    }
+
+    .val {
+      font-size: 19px;
+      font-weight: bold;
+    }
+  }
+}
+
+.team-results {
+  clear: both;
+}
+
+.btn-group {
+  padding: 14px 0;
+  float: right;
+  .btn {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
 
 .overall-place {
