--- a/assets/linker/templates/race_results_table_headings.html
+++ b/assets/linker/templates/race_results_table_headings.html
@@ -3,7 +3,13 @@
     <th class="overall-place">Overall Place</th>
     <% _.each(headings, function (heading) { %>
       <% if (heading) { %>
-        <% var classAttr = 'class="' + heading.get('id').replace('%', 'percent') + '-cell"'; %>
+        <%
+          var cssClass = heading.get('id').replace('%', 'percent') + '-cell';
+          if (heading.get('id') === 'team') {
+            cssClass += ' indiv-results';
+          }
+          var classAttr = 'class="' + cssClass + '"';
+        %>
         <th <%=classAttr %>><%= heading.get('text') %></th>
       <% } %>
     <% }); %>
