--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -32,6 +32,8 @@
 .team-heading {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   background-color: #eee;
+  max-width: 1100px;
+  min-width: 1000px;
 
   div {
     display: inline-block;
