--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -8,6 +8,7 @@ body {
   }
   .table {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    min-width: 800px;
     th {
       font-size: 12px;
       text-transform: uppercase;
@@ -38,13 +39,12 @@ body {
 }
 
 #content {
-  max-width: 1100px;
   min-width: 1000px;
+  padding: 0 32px 0 32px;
   margin: 0 auto 24px auto;
 
   .table-label {
-    max-width: 1100px;
-    min-width: 1000px;
+    min-width: 800px;
     margin: auto;
     color: #fff;
     font-size: 20px;
