--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,6 +1,7 @@
 <div id='header'></div>
 <div id='title'><a href="#">Club<span class="title-secondary">Pointz</span></a></div>
 <div id='content'></div>
+<div id='loading'></div>
 
 <script type="text/javascript">
   window.sailsExports = {}
