--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -98,12 +98,19 @@ body {
   }
 }
 
-.main #content {
-  background-image: url("/linker/../images/main_bg.jpg");
-  background-size: 1944px 1296px;
-  background-repeat: no-repeat;
-  background-position: -340px -180px;
-  background-attachment: fixed;
+.main {
+  #title {
+    background-attachment: fixed;
+    background-position: -340px -180px;
+  }
+
+  #content {
+    background-image: url("/linker/../images/main_bg.jpg");
+    background-size: 1944px 1296px;
+    background-repeat: no-repeat;
+    background-position: -340px -180px;
+    background-attachment: fixed;
+  }
 }
 
 .results {
