Style tables so resizing window doesn't suck

--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -45,6 +45,8 @@ body {
 
 #content {
   min-width: 1000px;
+  max-width: 100%;
+  overflow-x: scroll;
   padding: 0 32px 0 32px;
   margin: 0 auto 24px auto;
 
