--- a/assets/linker/templates/race_results_team.html
+++ b/assets/linker/templates/race_results_team.html
@@ -1,3 +1,4 @@
+<div class='team-section'>
 <div class='team-heading'>
   <div class='team-name'>
     <span class='label'>Team</span>
@@ -21,3 +22,4 @@
   </div>
 </div>
 <table class='team-result table table-condensed table-hover table-bordered'></table>
+</div>
