Fix some min widths

--- a/assets/linker/styles/app.scss
+++ b/assets/linker/styles/app.scss
@@ -13,7 +13,7 @@ body {
   }
   .table {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    min-width: 800px;
+    min-width: 100%;
     th {
       font-size: 12px;
       text-transform: uppercase;
