--- a/assets/linker/styles/race_results.scss
+++ b/assets/linker/styles/race_results.scss
@@ -14,6 +14,7 @@
   float: left;
   text-align: left;
   width: 100%;
+  position: relative;
 
   .race-title {
     font-size: 22px;
@@ -26,9 +27,13 @@
   }
   .race-link {
     float: right;
+    line-height: 31px;
   }
   .btn-group {
-    padding-top: 24px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-bottom: 14px;
     float: right;
     clear: right;
     .btn {
