--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,7 @@
     <script src="/linker/js/app/views/header.js"></script>
     <script src="/linker/js/app/views/raceResults.js"></script>
     <script src="/linker/js/app/views/standings.js"></script>
+    <script src="/linker/js/app/views/team.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
