--- a/assets/linker/templates/team.html
+++ b/assets/linker/templates/team.html
@@ -1,6 +1,6 @@
-<div class='team-header'>
-  <%= team.get('name') %>
-  <div class="btn-group">
+<div class='results-header'>
+  <div class='title'><%= team.get('name') %></div>
+  <div class='btn-group'>
     <button class='nav-men active btn btn-default'>Men</button>
     <button class='nav-women btn btn-default'>Women</button>
   </div>
