--- a/assets/linker/templates/race_results_team.html
+++ b/assets/linker/templates/race_results_team.html
@@ -1,5 +1,5 @@
-<div class='team-section'>
-<div class='team-heading'>
+<div class='results-section team-section'>
+<div class='table-heading'>
   <div class='team-name'>
     <span class='label'>Team</span>
     <br />
