--- a/assets/linker/templates/team_team_result.html
+++ b/assets/linker/templates/team_team_result.html
@@ -1,5 +1,5 @@
-<div class='team-team-result'>
-  <div class='ttr-heading'>
+<div class='results-section team-team-result'>
+  <div class='table-heading'>
     <div class='race-name'>
       <span class='label'>Race</span>
       <br />
