--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/linker/styles/css/app.css">
     <link rel="stylesheet" href="/linker/styles/css/race_results.css">
     <link rel="stylesheet" href="/linker/styles/css/standings.css">
+    <link rel="stylesheet" href="/linker/styles/css/team_results.css">
     <!--STYLES END-->
 
     <link href='http://fonts.googleapis.com/css?family=Bitter:400,700' rel='stylesheet' type='text/css'>
