Add team rank to team results

--- a/assets/linker/templates/team_team_result.html
+++ b/assets/linker/templates/team_team_result.html
@@ -8,7 +8,7 @@
     <div class='team-rank'>
       <span class='label'>Team Rank</span>
       <br />
-      <span class='val'><%= "?" %></span>
+      <span class='val'><%= tr.get('rank') %></span>
     </div>
     <div class='team-time'>
       <span class='label'>Team Time</span>
