--- a/assets/linker/templates/team.html
+++ b/assets/linker/templates/team.html
@@ -1,5 +1,8 @@
 <div class='results-header'>
   <div class='title'><%= team.get('name') %></div>
+  <% if (team.get('website')) { %>
+    <div class='details'><a href="<%= team.get('website') %>">Visit team's website</a></div>
+  <% } %>
   <div class='btn-group'>
     <button class='nav-men active btn btn-default'>Men</button>
     <button class='nav-women btn btn-default'>Women</button>
