--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -1,5 +1,29 @@
 <nav class='navbar navbar-inverse'>
   <span class='navbar-brand last-update'></span>
-  <a class='navbar-brand navbar-link' href='#'>Contact</a>
+  <button class="btn navbar-link header-button" data-toggle="modal" data-target="#contactModal">
+    Contact
+  </button>
 </nav>
 
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="contactModal">Contact</h4>
+      </div>
+      <div class="modal-body">
+          Name:<br>
+          <input id="contact-name" type="text" name="name" value="your name"><br>
+          E-mail:<br>
+          <input id="contact-email" type="text" name="mail" value="your email"><br>
+          Comment:<br>
+          <input id="contact-message" type="text" name="comment" value="your comment" size="50"><br><br>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button id="contact-submit" type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
