Hide contact modal on submit

--- a/assets/linker/styles/modal.scss
+++ b/assets/linker/styles/modal.scss
@@ -22,3 +22,9 @@
 .modal-body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+#contactModal {
+  .modal-body-sending, .modal-body-sent {
+    display: none;
+  }
+}
