--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -20,6 +20,12 @@
           Comment:<br>
           <input id="contact-message" type="text" name="comment" value="your comment" size="50"><br><br>
       </div>
+      <div class="modal-body-sending">
+        Sending...
+      </div>
+      <div class="modal-body-sent">
+        Sent!
+      </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button id="contact-submit" type="button" class="btn btn-primary">Submit</button>
