A little contact form styling

--- a/assets/linker/styles/modal.scss
+++ b/assets/linker/styles/modal.scss
@@ -27,4 +27,8 @@
   .modal-body-sending, .modal-body-sent {
     display: none;
   }
+  #contact-message {
+    width: 540px;
+    height: 100px;
+  }
 }
