--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -13,12 +13,9 @@
         <h4 class="modal-title" id="contactModal">Contact</h4>
       </div>
       <div class="modal-body">
-          Name:<br>
-          <input id="contact-name" type="text" name="name" value="your name"><br>
-          E-mail:<br>
-          <input id="contact-email" type="text" name="mail" value="your email"><br>
-          Comment:<br>
-          <input id="contact-message" type="text" name="comment" value="your comment" size="50"><br><br>
+          <input id="contact-name" type="text" name="name" placeholder="Name"><br>
+          <input id="contact-email" type="text" name="email" placeholder="Email"><br>
+          <textarea id="contact-message" name="message" placeholder="Message" size="5000"></textarea>
       </div>
       <div class="modal-body-sending">
         Sending...
