--- a/assets/linker/styles/modal.scss
+++ b/assets/linker/styles/modal.scss
@@ -1,5 +1,6 @@
 .modal-dialog {
   padding-top: 100px;
+  width: 500px;
 }
 
 .modal-content {
@@ -9,6 +10,7 @@
 .modal-header {
   background-color: #222;
   color: #ddd;
+  padding: 8px 15px;
   .modal-title {
     font-family: 'Bitter', sans-serif;
   }
@@ -21,6 +23,22 @@
 
 .modal-body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  padding-bottom: 0;
+}
+
+.modal-footer {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  border-top: none;
+  margin-top: 0;
+  padding: 15px;
+  .btn+.btn {
+    margin-left: 2px;
+  }
+  button {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
 }
 
 #contactModal {
@@ -28,7 +46,7 @@
     display: none;
   }
   #contact-message {
-    width: 540px;
+    width: 440px;
     height: 100px;
   }
 }
