--- a/assets/linker/templates/header.html
+++ b/assets/linker/templates/header.html
@@ -17,7 +17,7 @@
           <input id="contact-email" type="text" name="email" placeholder="Email"><br>
           <textarea id="contact-message" name="message" placeholder="Message" size="5000"></textarea>
       </div>
-      <div class="modal-body-sending">
+      <div class="modal-body-loading">
         Sending...
       </div>
       <div class="modal-body-sent">
